--- a/Animal-webpage/index.html
+++ b/Animal-webpage/index.html
@@ -7,6 +7,7 @@
         
     </head>
     <body>
+        <h1>Click the button to display the animal's data</h1>
         <header>
             <button id="btn">Fetch Info for 3 new animals</button>
         </header>
